# pyLoess

./: .flake8  README.md  pyproject.toml  setup.py
tests/: test_loess.py
